--- a/ServerPrototype/build.gradle
+++ b/ServerPrototype/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.6.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
