--- a/ServerPrototype/src/main/resources/application.properties
+++ b/ServerPrototype/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=ServerPrototype
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.sql.init.enabled=true
+spring.sql.init.schema-locations=classpath:db/migrations/test_create_user_table.sql
