Optimized DB connection, refactored methods and architecture

--- a/ServerPrototype/build.gradle
+++ b/ServerPrototype/build.gradle
@@ -22,7 +22,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
+	implementation 'com.zaxxer:HikariCP:5.0.1' // Use latest version
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 
 tasks.named('test') {
